# messaging

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix  mix.exs  package.json  pnpm-lock.yaml
api/: Cargo.toml
api/src/: error.rs  main.rs
api/src/dtos/: mod.rs  send_message_dto.rs
api/src/handlers/: message_handler.rs  mod.rs
api/src/routes/: message_routes.rs  mod.rs
apps/messaging/: .gitignore  README.md  mix.exs
apps/messaging/lib/: messaging.ex
apps/messaging/lib/messaging/: application.ex  mailer.ex  repo.ex
apps/messaging/priv/repo/: seeds.exs
apps/messaging/test/support/: data_case.ex
apps/messaging_web/: .gitignore  README.md  mix.exs
apps/messaging_web/assets/css/: app.css
apps/messaging_web/assets/js/: app.js
apps/messaging_web/lib/: messaging_web.ex
apps/messaging_web/lib/messaging_web/: application.ex  endpoint.ex  gettext.ex  router.ex  telemetry.ex
apps/messaging_web/lib/messaging_web/components/: core_components.ex  layouts.ex
apps/messaging_web/test/: test_helper.exs
apps/messaging_web/test/support/: conn_case.ex
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
core/: Cargo.toml
core/src/application/: mod.rs
core/src/application/ports/: mod.rs
core/src/application/services/: message_service.rs  mod.rs
core/src/application/usecases/: mod.rs  send_message_usecase.rs
core/src/domain/: mod.rs
core/src/domain/events/: mod.rs
core/src/domain/models/: message.rs  messenger_type.rs  mod.rs  payload.rs  value_objects.rs
core/src/domain/services/: message_routing_service.rs  mod.rs
core/src/infrastructure/: mod.rs
core/src/infrastructure/database/: mod.rs  schema.sql
core/src/infrastructure/events/: mod.rs  redis_event_dispatcher.rs  simple_event_dispatcher.rs
core/src/infrastructure/messengers/: factory.rs  max.rs  mod.rs  telegram.rs  vk.rs
core/src/infrastructure/persistence/: mod.rs  postgres_message_repository.rs
core/src/infrastructure/queue/: mod.rs  redis_message_queue.rs
core/src/infrastructure/workers/: message_queue_worker.rs  mod.rs
docs/: env.example  tokens.md
max_api_client/: Cargo.toml
max_api_client/src/: client.rs  error.rs  lib.rs  models.rs
migrations/: 20241117130000_init.sql  20241118000000_message_attempts.sql
src/: config.rs  main.rs
src/application/: mod.rs
src/application/handlers/: message_dispatcher.rs  mod.rs
src/application/services/: event_bus.rs  jwt.rs  messenger.rs  mod.rs
src/application/usecases/: authenticate_user.rs  get_message.rs  get_message_attempts.rs  list_chats.rs  list_messages.rs  list_tokens.rs  mod.rs  register_token.rs  retry_message.rs  schedule_message.rs
src/domain/: errors.rs  mod.rs
src/domain/events/: mod.rs
src/domain/models/: chat.rs  message.rs  messenger.rs  mod.rs  token.rs  user.rs
src/domain/repositories/: mod.rs
src/domain/value_objects/: mod.rs
src/infrastructure/: mod.rs
src/infrastructure/messaging/: jetstream.rs  mod.rs  telegram.rs  vk.rs
src/infrastructure/repositories/: in_memory.rs  postgres.rs
src/presentation/http/: mod.rs  security.rs
src/presentation/http/endpoints/: auth.rs  chats.rs  health.rs  messages.rs  mod.rs  root.rs  tokens.rs
src/presentation/http/mappers/: mod.rs
src/presentation/http/requests/: mod.rs
src/presentation/http/responses/: mod.rs
src/presentation/models/: mod.rs
(+8 files in other folders)
