[package]
name = "messaging"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
poem = "3.1.12"
poem-openapi = { version = "5.1.16", features = ["swagger-ui"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
chrono = { version = "0.4.39", features = ["serde"] }
async-trait = "0.1.83"
async-nats = { version = "0.35.1", features = ["jetstream"] }
jsonwebtoken = { version = "9.3.0", default-features = false, features = ["serde"] }
once_cell = "1.20.2"
tokio-stream = "0.1.16"
