[package]
name = "messaging"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
poem = { version = "3.1.12", features = ["cookie"] }
poem-openapi = { version = "5.1.16", features = ["swagger-ui", "chrono", "uuid", "email"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sqlx = { version = "0.7.4", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "chrono",
    "uuid",
    "migrate",
] }
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
chrono = { version = "0.4.39", features = ["serde"] }
async-trait = "0.1.83"
async-nats = "0.35.1"
jsonwebtoken = "9.3.1"
once_cell = "1.20.2"
tokio-stream = "0.1.16"
