[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
messaging = { path = "../core" }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.7", features = ["postgres", "uuid", "chrono", "runtime-tokio-rustls"] }
redis = { version = "0.23", features = ["tokio-comp"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
