[package]
name = "messaging"
version = "0.1.0"
edition = "2024"

[lib]
name = "messaging"
path = "src/lib.rs"

[dependencies]
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
sqlx = { version = "0.7", features = ["postgres", "uuid", "chrono", "runtime-tokio-rustls"] }
redis = { version = "0.23", features = ["tokio-comp"] }
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
futures = "0.3"
max_api_client = { path = "../max_api_client" }